changes for -Dqa